dfir_rs/tests/compile-fail-stable/surface_singleton_mutation.rs
../compile-fail/surface_singleton_mutation.rs